--- a/index.html
+++ b/index.html
@@ -3,54 +3,111 @@
   <head>
     <title>Quarantine Bakery</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/oven.css">
+    <link rel="stylesheet" href="css/bread_final.css">
+    <link rel="stylesheet" href="css/bread_in_oven.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=VT323&display=swap" rel="stylesheet">
     <script src="js/libs/jquery-3.3.1.min.js"></script>
-    <script src="js/sound.js"></script>
-    <script src="js/fsm.js"></script>
-    <script src="js/anim.js"></script>
-    <script src="js/interaction.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.min.js">
+      // import {Howl, Howler} from 'howler';
+    </script>
     <script src="js/oven-buttons.js"></script>
   </head>
-    <body style="background-color: #88AAA3;">
-        <div class="floor"></div>
-        <div class="counter">
-          <div class="counterSurface">
-            <div class="counterDoor ">
-              <div class="counterDoorknob1"></div>
-            </div>
-            <div class="counterDoor ">
-              <div class="counterDoorknob2"></div>
-            </div>
-            <div class="counterDoor ">
-              <div class="counterDoorknob3"></div>
-            </div>
-            <div class="counterDoor ">
-              <div class="counterDoorknob4"></div>
-            </div>
-          </div>
+
+  <body style="background-color: #88AAA3;">
+    <div class="floor"></div>
+    <div class="counter">
+      <div class="counterSurface">
+      <div class="counterDoor ">
+      <div class="counterDoorknob1"></div>
+    </div>
+    <div class="counterDoor ">
+      <div class="counterDoorknob2"></div>
+    </div>
+    <div class="counterDoor ">
+      <div class="counterDoorknob3"></div>
+    </div>
+    <div class="counterDoor ">
+      <div class="counterDoorknob4"></div>
+    </div>
+    </div>
+    </div>
+    <div class="ovenBackground">
+    <div class="ovenTop">
+      <!-- temp buttons -->
+      <div id="temperature">0</div>
+      <input type="button" id="tempUp" onClick="tempUp()">Up</input>
+      <input type="button" id="tempDown" onClick="tempDown()">Down</input>
+      <!-- temp buttons -->
+    <div class="ovenButtons"></div>
+    <div class="ovenButtons"></div>
+    <div class="ovenButtons"></div>
+    <div class="ovenButtons"></div>
+    </div>
+    <div class="ovenDoor">
+      <div class="bread_first">
+        <span class="bread1__strip bread1__strip--1"></span>
+        <span class="bread1__strip bread1__strip--2"></span>
+        <span class="bread1__strip bread1__strip--3"></span>
       </div>
-        <div class="ovenBackground">
-          <div class="ovenTop">
-            <!-- temp buttons -->
-            <div id="temperature">0</div>
-            <input type="button" id="tempUp" onClick="tempUp()">Up</input>
-            <input type="button" id="tempDown" onClick="tempDown()">Down</input>
-            <!-- temp buttons -->
-            <div class="ovenButtons"></div>
-            <div class="ovenButtons"></div>
-            <div class="ovenButtons"></div>
-            <div class="ovenButtons"></div>
-          </div>
-          <div class="ovenDoor"></div>
-          <div class="ovenBottom"></div>
-        </div>
+      </div>
+      
+    </div>
+    <div class="ovenBottom"></div>
+    </div>
 
 
-          <div class="toast"></div>
-        <div class="bowl"></div>
-         </div>
-        </div>
-      </div>
+    <div class="bread_final">
+      <span class="bread3__strip bread3__strip--1"></span>
+      <span class="bread3__strip bread3__strip--2"></span>
+      <span class="bread3__strip bread3__strip--3"></span>
+    </div>
+  <div class="steam">
+      <span class="steam__ring steam__ring--1"></span>
+      <span class="steam__ring steam__ring--2"></span>
+      <span class="steam__ring steam__ring--3"></span>
+    </div>
+
+    <div class="toast"></div>
+    <div class="bowl"></div>
+    </div>
+    </div>
+    </div>
+
+    <script>
+      $(document).ready(function() {
+
+        let baking_time_range = [10.0, 15.0]
+        let temperature_range = [400.0, 425.0]
+
+        var tick = new Howl({
+      src: ['assets/audio/tick.wav']
+    });
+    var ding = new Howl({ src: ['assets/audio/ding.wav']});
+    var door = new Howl({ src: ['assets/audio/door.wav']});
+        $('.toast').click(function () {
+          console.log("Clicked toast!");
+
+
+    ding.play();
+    });
+
+    function getRangeStatus(value, range){
+      if (value < range[0]){
+        return -1;
+      } else if (value > range[1]){
+        return 1;
+      } else {
+        return 0;
+      }
+    }
+
+    function startTimer(){
+
+    }
+
+      });
+    </script>
 
   </body>
 </html>
