Add placeholder for temp

--- a/html/oven.html
+++ b/html/oven.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <div class="oven-exterior">
-      <div class="oven-display"></div>
-      <div class="temp-text"></div>
+      <div class="oven-display">
+        <p class="temp-text">100 <sup>o</sup></p>
+      </div>
       <div class="temp-text time-text"></div>
       <div class="oven-temp">
         <div class="temp-indicator"></div>
