Fix door and button placement

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="oven-display">
         <p class="temp-text" id="temperature">100 <sup>o</sup></p>
       </div>
-      <input type="button" id="tempUp" onClick="tempUp()">Up</input>
-      <input type="button" id="tempDown" onClick="tempDown()">Down</input>
+      <input type="button" id="tempUp" onClick="tempUp()"></input>
+      <input type="button" id="tempDown" onClick="tempDown()"></input>
       <div class="temp-text time-text"></div>
       <div class="oven-temp">
         <div class="temp-indicator"></div>
