Fixed door opening and removed unused CSS
Door opening js trigger needed an id added to the div and there was unused css in style.css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="oven-interior">
         <div class="interior-lines"></div>
       </div>
-      <div class="oven-door door">
+      <div id="oven-door" class="oven-door" onClick="doorOpen()">
         <div class="oven-handle"></div>
       </div>
     </div>
