--- a/index.html
+++ b/index.html
@@ -85,37 +85,65 @@
     });
     var ding = new Howl({ src: ['assets/audio/ding.wav']});
     var door = new Howl({ src: ['assets/audio/door.wav']});
-        $('.toast').click(function () {
-          console.log("Clicked toast!");
-
-
-    ding.play();
+    $('.ovenBackground').click(function () {
+          console.log("Clicked oven door!");
+          if (door_open && !bread_in_oven){
+            // put bread in oven
+          } else if (!door_open && bread_in_oven){
+            // if not baking, start baking and timer
+            if (!baking) {
+              startTimer();
+            } else {
+              stopTimer();
+            }
+          } else if (!door_open && !bread_in_oven){
+            // open door
+          } else if (door_open && bread_in_oven){
+            // do nothing
+          }
+          door.play();
     });
 
     function getRangeStatus(value, range){
       if (value < range[0]){
-        return -1;
-      } else if (value > range[1]){
-        return 1;
-      } else {
         return 0;
+      } else if (value > range[1]){
+        return 2;
+      } else {
+        return 1;
       }
     }
 
+    let door_open = false;
+    let bread_in_oven = false;
+    let outcomes = ['undercooked', 'ok', 'burned']
+    let baked = false;
+    function determineOutcome(time){
+      return outcomes[getRangeStatus(time, baking_time_range)];
+    }
 
     // https://www.youtube.com/watch?v=kDnfrlK2CLg&t=315s
-    let door_closed_at;
-    let door_opened_at;
     let time = 0;
+    let baking = false;
 
     function startTimer(){
+      baking = true;
       increment();
     }
 
+    function stopTimer(){
+      baking = false;
+    }
+
+    function toggle(variable){
+      return !variable;
+    }
+  
     function increment(){
-      if (baking == 1){
+      if (baking){
         setTimeout(function() {
           time++;
+          console.log("Time: " + time);
           increment();
         }, 100);
       }
