--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   </head>
 
-  <body style="background-color: #88AAA3;">
+  <body>
     <div class="floor"></div>
     <div class="counter">
       <div class="counterSurface">
@@ -143,7 +143,7 @@
     function toggle(variable){
       return !variable;
     }
-  
+
     function increment(){
       if (baking){
         setTimeout(function() {
