Make temp arrows and create recipe book

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <div class="ovenBackground">
     <div class="oven-exterior">
       <div class="oven-display">
-        <p class="temp-text" id="temperature">100 <sup>o</sup></p>
+        <p class="temp-text" id="temperature">0</p>
+        <!-- <p class="up-text" id="up-text"> UP </p>
+        <p class="down-text" id="down-text"> DOWN </p> -->
       </div>
       <input type="button" id="tempUp" onClick="tempUp()"></input>
       <input type="button" id="tempDown" onClick="tempDown()"></input>
