Click to move bread

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     </div>
     <script src="js/oven-buttons.js"></script>
 
-    <div class="bread_final">
+    <div class="bread_counter">
       <span class="bread3__strip bread3__strip--1"></span>
       <span class="bread3__strip bread3__strip--2"></span>
       <span class="bread3__strip bread3__strip--3"></span>
     </div>
-    <div class="bread_first">
+    <div class="bread_oven">
       <span class="bread1__strip bread1__strip--1"></span>
       <span class="bread1__strip bread1__strip--2"></span>
       <span class="bread1__strip bread1__strip--3"></span>
