Fix interaction sequences

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     <div class="pagebottom pagebottom-right"></div>
     <div class="book-center"></div>
     <div class="text">
-      1. Adjust the temperature.<br /><br /><br />
-      2. Open the oven door. <br /><br /><br />
+      1. Set temperature to 400F.<br /><br />
+      2. Open the oven door. <br /><br />
       3. Put the bread in the oven.
     </div>
     <div class="text right-text">
-      4. Close the oven door.<br /><br /><br />
-      5. Wait 30 seconds. <br /><br /><br />
-      6. Open the door for your freshly baked loaf!
+      4. Close the oven door.<br /><br />
+      5. Wait for the timer to go off. <br /><br />
+      6. Open the door and retrieve your freshly baked loaf!
     </div>
   </body>
 </html>
