--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="js/libs/jquery-3.3.1.min.js"></script>
+    <script src="js/libs/timer.js"></script>
     <script src="js/libs/state-machine.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.3/howler.min.js"></script>
   </head>
