--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Quarantine Bakery</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/oven.css" />
+    <link rel="stylesheet" href="css/bread_raw.css" />
     <link rel="stylesheet" href="css/bread_final.css" />
     <link rel="stylesheet" href="css/bread_in_oven.css" />
     <link rel="stylesheet" href="css/recipe-book.css" />
