--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script src="js/interaction.js"></script>
   <div id="gameContainer">
     <div class="wall">
-      <h1>Quaratine Bakery</h1>
+      <h1>Quarantine Bakery</h1>
     </div>
     <div class="floor"></div>
     <div class="counterAndOven">
